===========
 Changelog
===========

1.0.2 (unreleased)
==================

- Nothing changed yet.


1.0.1 (2013-12-26)
==================

- Bugfix: Successfully render calendar if month name contains an umlaut.


1.0.0 (2013-11-03)
==================

- Initial release.